build-info/build.log
warning: unused import: `LastInfo`
 --> src/graphics.rs:4:35
  |
4 | use crate::crosstyping::{TunedDb, LastInfo};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: fields `uid` and `principal` are never read
  --> src/crosstyping.rs:55:9
   |
54 | pub struct Metadata<'de> {
   |            -------- fields in this struct
55 |     pub uid: Uuid,
   |         ^^^
56 |     pub time: LogicalTime,
57 |     pub principal: Option<Cow<'de, str>>    // None stands for local
   |         ^^^^^^^^^
   |
   = note: `Metadata` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` on by default

warning: fields `total_amount`, `count`, `times`, and `group` are never read
  --> src/crosstyping.rs:82:9
   |
81 | pub struct LastInfo {
   |            -------- fields in this struct
82 |     pub total_amount: u64,
   |         ^^^^^^^^^^^^
83 |     pub count: usize,
   |         ^^^^^
84 |     pub times: Interval,
   |         ^^^^^
85 |     pub group: Option<String>,
   |         ^^^^^

warning: methods `gen_interval_last`, `total_spending_last`, and `insert_expense` are never used
  --> src/crosstyping.rs:89:8
   |
88 | pub trait TunedDb {
   |           ------- methods in this trait
89 |     fn gen_interval_last(&mut self, dur: Duration) -> Interval;
   |        ^^^^^^^^^^^^^^^^^
...
92 |     fn total_spending_last(&self, t: Interval, group: Option<&str>) -> LastInfo;
   |        ^^^^^^^^^^^^^^^^^^^
93 |     
94 |     fn insert_expense(&mut self, e: ClientData<'static>) -> Expense<'_>;
   |        ^^^^^^^^^^^^^^

warning: field `db` is never read
 --> src/graphics.rs:8:5
  |
7 | pub struct Trac<D: TunedDb> {
  |            ---- field in this struct
8 |     db: D
  |     ^^

warning: `ting-expense-a` (bin "ting-expense-a") generated 5 warnings (run `cargo fix --bin "ting-expense-a"` to apply 1 suggestion)
warning: `ting-expense-a` (bin "ting-expense-a") generated 5 warnings (5 duplicates)
   Compiling ting-expense-a v0.1.0 (/home/tigr/ssh-move/ting-expense-a)
error[E0601]: `main` function not found in crate `ting_expense_a`
  --> src/main.rs:32:2
   |
32 | }
   |  ^ consider adding a `main` function to `src/main.rs`

For more information about this error, try `rustc --explain E0601`.
warning: `ting-expense-a` (bin "ting-expense-a") generated 1 warning (1 duplicate)
error: could not compile `ting-expense-a` (bin "ting-expense-a") due to 1 previous error; 1 warning emitted
